# python-openai-setup

./: README.md
conda-env/: basic_script.py  config.json
pipenv-env/: basic_script.py
poetry-env/: basic_script.py  config.yaml  pyproject.toml
venv-env/: .env  basic_script.py
